--- a/infrastructure/entry-points/reactive-web/build.gradle
+++ b/infrastructure/entry-points/reactive-web/build.gradle
@@ -44,6 +44,10 @@ dependencies {
     // Testing
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
+
+
+    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.3.0'
+
 }
 
 test {
