--- a/domain/usecase/build.gradle
+++ b/domain/usecase/build.gradle
@@ -1,3 +1,7 @@
 dependencies {
     implementation project(':model')
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
+    testImplementation 'org.mockito:mockito-core:5.7.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.7.0'
+    testImplementation 'io.projectreactor:reactor-test:3.6.0'
 }
