--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ buildscript {
         jacocoVersion = '0.8.13'
         pitestVersion = '1.19.0-rc.1'
         lombokVersion = '1.18.38'
+        jjwtVersion = '0.11.5'
+
     }
 }
 
@@ -15,6 +17,8 @@ plugins {
     id 'info.solidsoft.pitest' version "${pitestVersion}" apply false
     id 'org.sonarqube' version "${sonarVersion}"
     id 'jacoco'
+
+
 }
 
 sonar {
