--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -46,7 +46,12 @@ springdoc:
   swagger-ui:
     enabled: true
     path: /swagger-ui.html
-jwt:
-  secret: ChangeThisSecretKeyToASecureLongRandomValue!
-  access-token-validity-ms: 900000
-  refresh-token-validity-ms: 86400000
+security:
+  jwt:
+    secret: "${JWT_SECRET:change_this_very_long_secret_key_32_chars_min}"
+    access-token-validity-ms: 900000
+    refresh-token-validity-ms: 86400000
+logging:
+  level:
+    co.com.pragma.autenticacion: INFO
+    org.springframework.security: INFO
