--- a/infrastructure/entry-points/reactive-web/build.gradle
+++ b/infrastructure/entry-points/reactive-web/build.gradle
@@ -1,5 +1,4 @@
 plugins {
-    id 'org.springframework.boot'
     id 'java'
 }
 
@@ -10,45 +9,54 @@ java {
     sourceCompatibility = JavaVersion.VERSION_17
 }
 
+ext {
+    lombokVersion = '1.18.30'
+}
+
 dependencies {
-    // Módulos internos
+    // ---- Módulos internos ----
     implementation project(':usecase')
     implementation project(':model')
 
-    // WebFlux + Actuator
+    // ---- WebFlux + Actuator ----
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
-    // Observabilidad
+    // ---- Seguridad ----
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
+    // ---- JWT ----
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+    // ---- Observabilidad ----
     implementation 'io.micrometer:micrometer-registry-prometheus'
 
-    // OpenAPI (Swagger UI para WebFlux)
+    // ---- OpenAPI para WebFlux ----
     implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.6.0'
 
-    // Validación con Jakarta
+    // ---- Validación ----
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-    // MapStruct
+    // ---- MapStruct ----
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 
-    // Lombok
+    // ---- Lombok ----
     compileOnly "org.projectlombok:lombok:${lombokVersion}"
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
     testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
     testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
-    // Lombok + MapStruct integración
-    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
-
-    // Testing
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'io.projectreactor:reactor-test'
+    // ---- Logging ----
     implementation 'org.slf4j:slf4j-api:2.0.13'
     implementation 'ch.qos.logback:logback-classic:1.5.13'
 
-    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.3.0'
-
+    // ---- Testing ----
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'io.projectreactor:reactor-test'
 }
 
 test {
